redisbank-pfm/k8s/pfm-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-pfm-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-pfm
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-pfm
    spec:
      containers:
      - name: redisbank-pfm
        image: <yourdockerhubid>/redisbank-pfm:latest
        imagePullPolicy: Always
        ports:
        - name: redisbank-pfm
          containerPort: 8081
