redisbank-pfm/k8s/pfm-app.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: redisbank-pfm
  name: redisbank-pfm
  namespace: redis-demo
spec:
  host: <yourhostname>
  port:
    targetPort: redisbank-pfm
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: redisbank-pfm
    weight: 100
  wildcardPolicy: None
